[gd_scene load_steps=4 format=3 uid="uid://emhocpogsvov"]

[ext_resource type="PackedScene" uid="uid://caf5n3ocbok6p" path="res://scenes/gui/gui_base.tscn" id="1_hhfd3"]
[ext_resource type="Script" uid="uid://us6gl1onf448" path="res://scripts/home_screen.gd" id="2_n5c0n"]
[ext_resource type="Texture2D" uid="uid://c8v2wyt438ykn" path="res://assets/pixle_art/gui/gui_button.png" id="3_to4jd"]

[node name="HomeScreen" instance=ExtResource("1_hhfd3")]
script = ExtResource("2_n5c0n")

[node name="Title" parent="." index="1"]
text = "Bomb Miner"

[node name="PlayButton" type="TextureButton" parent="." index="3"]
offset_left = 112.0
offset_top = 64.0
offset_right = 208.0
offset_bottom = 80.0
texture_normal = ExtResource("3_to4jd")

[node name="Label" type="Label" parent="PlayButton" index="0"]
layout_mode = 0
offset_right = 96.0
offset_bottom = 16.0
theme_override_colors/font_color = Color(0.0529348, 0.126245, 0.206312, 1)
theme_override_font_sizes/font_size = 11
text = "Play Game"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MenuButton" type="TextureButton" parent="." index="4"]
offset_left = 96.0
offset_top = 96.0
offset_right = 192.0
offset_bottom = 112.0
texture_normal = ExtResource("3_to4jd")

[node name="Label" type="Label" parent="MenuButton" index="0"]
layout_mode = 0
offset_right = 96.0
offset_bottom = 16.0
theme_override_colors/font_color = Color(0.0529348, 0.126245, 0.206312, 1)
theme_override_font_sizes/font_size = 11
text = "Level Select"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SettingsButton" type="TextureButton" parent="." index="5"]
offset_left = 112.0
offset_top = 128.0
offset_right = 208.0
offset_bottom = 144.0
texture_normal = ExtResource("3_to4jd")

[node name="Label" type="Label" parent="SettingsButton" index="0"]
layout_mode = 0
offset_right = 96.0
offset_bottom = 16.0
theme_override_colors/font_color = Color(0.0529348, 0.126245, 0.206312, 1)
theme_override_font_sizes/font_size = 11
text = "Change Settings"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="MenuButton" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="SettingsButton" to="." method="_on_settings_button_pressed"]
